src/antlr_files/grammers/CParser/CParserParser.py
# Generated from CParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CParserParser ( Parser ):

    grammarFileName = "CParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'*'", "'{'", "'}'", "','", "'='", 
                     "'('", "')'", "':'", "'['", "']'", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", 
                     "'>>='", "'/'", "'%'", "'+'", "'-'", "'<<'", "'>>'", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&'", 
                     "'^'", "'|'", "'&&'", "'||'", "'?'", "'!'", "'~'", 
                     "'++'", "'--'", "'.'", "'->'", "'const'", "'int'", 
                     "'float'", "'char'", "'void'", "'return'", "'if'", 
                     "'else'", "'while'", "'for'", "'break'", "'continue'", 
                     "'switch'", "'case'", "'default'", "'enum'", "'struct'", 
                     "'union'", "'typedef'", "'sizeof'", "'printf'", "'scanf'", 
                     "'#'", "'include'", "'define'", "'<stdio.h>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "CONST", "INT", "FLOAT_KW", 
                      "CHAR_KW", "VOID", "RETURN", "IF", "ELSE", "WHILE", 
                      "FOR", "BREAK", "CONTINUE", "SWITCH", "CASE", "DEFAULT", 
                      "ENUM", "STRUCT", "UNION", "TYPEDEF", "SIZEOF", "PRINTF", 
                      "SCANF", "HASH", "INCLUDE", "DEFINE", "LT_STDIO_H", 
                      "FLOAT_LIT", "INTEGER", "STRING_LIT", "CHAR_LIT", 
                      "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_translation_unit = 0
    RULE_top_level_item = 1
    RULE_include_directive = 2
    RULE_define_directive = 3
    RULE_define_value = 4
    RULE_typedef_decl = 5
    RULE_typedef_name = 6
    RULE_enum_decl = 7
    RULE_enum_specifier = 8
    RULE_enum_body = 9
    RULE_enum_constant = 10
    RULE_struct_decl = 11
    RULE_struct_specifier = 12
    RULE_struct_member = 13
    RULE_union_decl = 14
    RULE_union_specifier = 15
    RULE_union_member = 16
    RULE_function_definition = 17
    RULE_function_declaration = 18
    RULE_return_type_spec = 19
    RULE_parameter_list = 20
    RULE_parameter = 21
    RULE_compound_statement = 22
    RULE_block_item = 23
    RULE_statement = 24
    RULE_if_statement = 25
    RULE_while_statement = 26
    RULE_for_statement = 27
    RULE_control_body = 28
    RULE_for_init = 29
    RULE_for_update = 30
    RULE_switch_statement = 31
    RULE_switch_case = 32
    RULE_switch_default = 33
    RULE_return_statement = 34
    RULE_break_statement = 35
    RULE_continue_statement = 36
    RULE_printf_statement = 37
    RULE_printf_arg = 38
    RULE_scanf_statement = 39
    RULE_scanf_arg = 40
    RULE_var_decl = 41
    RULE_array_dimension = 42
    RULE_var_initializer = 43
    RULE_array_initializer = 44
    RULE_initializer_list = 45
    RULE_initializer = 46
    RULE_type_spec = 47
    RULE_assignment = 48
    RULE_assign_op = 49
    RULE_expression = 50
    RULE_unary_expr = 51
    RULE_postfix_expr = 52
    RULE_postfix_op = 53
    RULE_argument_list = 54
    RULE_primary_expr = 55
    RULE_literal = 56

    ruleNames =  [ "translation_unit", "top_level_item", "include_directive", 
                   "define_directive", "define_value", "typedef_decl", "typedef_name", 
                   "enum_decl", "enum_specifier", "enum_body", "enum_constant", 
                   "struct_decl", "struct_specifier", "struct_member", "union_decl", 
                   "union_specifier", "union_member", "function_definition", 
                   "function_declaration", "return_type_spec", "parameter_list", 
                   "parameter", "compound_statement", "block_item", "statement", 
                   "if_statement", "while_statement", "for_statement", "control_body", 
                   "for_init", "for_update", "switch_statement", "switch_case", 
                   "switch_default", "return_statement", "break_statement", 
                   "continue_statement", "printf_statement", "printf_arg", 
                   "scanf_statement", "scanf_arg", "var_decl", "array_dimension", 
                   "var_initializer", "array_initializer", "initializer_list", 
                   "initializer", "type_spec", "assignment", "assign_op", 
                   "expression", "unary_expr", "postfix_expr", "postfix_op", 
                   "argument_list", "primary_expr", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    CONST=46
    INT=47
    FLOAT_KW=48
    CHAR_KW=49
    VOID=50
    RETURN=51
    IF=52
    ELSE=53
    WHILE=54
    FOR=55
    BREAK=56
    CONTINUE=57
    SWITCH=58
    CASE=59
    DEFAULT=60
    ENUM=61
    STRUCT=62
    UNION=63
    TYPEDEF=64
    SIZEOF=65
    PRINTF=66
    SCANF=67
    HASH=68
    INCLUDE=69
    DEFINE=70
    LT_STDIO_H=71
    FLOAT_LIT=72
    INTEGER=73
    STRING_LIT=74
    CHAR_LIT=75
    IDENTIFIER=76
    WS=77
    LINE_COMMENT=78
    BLOCK_COMMENT=79

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Translation_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CParserParser.EOF, 0)

        def top_level_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParserParser.Top_level_itemContext)
            else:
                return self.getTypedRuleContext(CParserParser.Top_level_itemContext,i)


        def getRuleIndex(self):
            return CParserParser.RULE_translation_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslation_unit" ):
                listener.enterTranslation_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslation_unit" ):
                listener.exitTranslation_unit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslation_unit" ):
                return visitor.visitTranslation_unit(self)
            else:
                return visitor.visitChildren(self)




    def translation_unit(self):

        localctx = CParserParser.Translation_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translation_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 46)) & ~0x3f) == 0 and ((1 << (_la - 46)) & 1078427679) != 0):
                self.state = 114
                self.top_level_item()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(CParserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Top_level_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include_directive(self):
            return self.getTypedRuleContext(CParserParser.Include_directiveContext,0)


        def define_directive(self):
            return self.getTypedRuleContext(CParserParser.Define_directiveContext,0)


        def typedef_decl(self):
            return self.getTypedRuleContext(CParserParser.Typedef_declContext,0)


        def enum_decl(self):
            return self.getTypedRuleContext(CParserParser.Enum_declContext,0)


        def struct_decl(self):
            return self.getTypedRuleContext(CParserParser.Struct_declContext,0)


        def union_decl(self):
            return self.getTypedRuleContext(CParserParser.Union_declContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(CParserParser.Function_definitionContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(CParserParser.Function_declarationContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(CParserParser.Var_declContext,0)


        def getRuleIndex(self):
            return CParserParser.RULE_top_level_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTop_level_item" ):
                listener.enterTop_level_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTop_level_item" ):
                listener.exitTop_level_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTop_level_item" ):
                return visitor.visitTop_level_item(self)
            else:
                return visitor.visitChildren(self)




    def top_level_item(self):

        localctx = CParserParser.Top_level_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_top_level_item)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.include_directive()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.define_directive()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.typedef_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.enum_decl()
                self.state = 126
                self.match(CParserParser.T__0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.struct_decl()
                self.state = 129
                self.match(CParserParser.T__0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.union_decl()
                self.state = 132
                self.match(CParserParser.T__0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 134
                self.function_definition()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 135
                self.function_declaration()
                self.state = 136
                self.match(CParserParser.T__0)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 138
                self.var_decl()
                self.state = 139
                self.match(CParserParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Include_directiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self):
            return self.getToken(CParserParser.HASH, 0)

        def INCLUDE(self):
            return self.getToken(CParserParser.INCLUDE, 0)

        def LT_STDIO_H(self):
            return self.getToken(CParserParser.LT_STDIO_H, 0)

        def STRING_LIT(self):
            return self.getToken(CParserParser.STRING_LIT, 0)

        def getRuleIndex(self):
            return CParserParser.RULE_include_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude_directive" ):
                listener.enterInclude_directive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude_directive" ):
                listener.exitInclude_directive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_directive" ):
                return visitor.visitInclude_directive(self)
            else:
                return visitor.visitChildren(self)




    def include_directive(self):

        localctx = CParserParser.Include_directiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include_directive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(CParserParser.HASH)
            self.state = 144
            self.match(CParserParser.INCLUDE)
            self.state = 145
            _la = self._input.LA(1)
            if not(_la==71 or _la==74):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Define_directiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self):
            return self.getToken(CParserParser.HASH, 0)

        def DEFINE(self):
            return self.getToken(CParserParser.DEFINE, 0)

        def IDENTIFIER(self):
            return self.getToken(CParserParser.IDENTIFIER, 0)

        def define_value(self):
            return self.getTypedRuleContext(CParserParser.Define_valueContext,0)


        def getRuleIndex(self):
            return CParserParser.RULE_define_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefine_directive" ):
                listener.enterDefine_directive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefine_directive" ):
                listener.exitDefine_directive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_directive" ):
                return visitor.visitDefine_directive(self)
            else:
                return visitor.visitChildren(self)




    def define_directive(self):

        localctx = CParserParser.Define_directiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_define_directive)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CParserParser.HASH)
            self.state = 148
            self.match(CParserParser.DEFINE)
            self.state = 149
            self.match(CParserParser.IDENTIFIER)
            self.state = 150
            self.define_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Define_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(CParserParser.INTEGER, 0)

        def FLOAT_LIT(self):
            return self.getToken(CParserParser.FLOAT_LIT, 0)

        def CHAR_LIT(self):
            return self.getToken(CParserParser.CHAR_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(CParserParser.STRING_LIT, 0)

        def IDENTIFIER(self):
            return self.getToken(CParserParser.IDENTIFIER, 0)

        def INT(self):
            return self.getToken(CParserParser.INT, 0)

        def FLOAT_KW(self):
            return self.getToken(CParserParser.FLOAT_KW, 0)

        def CHAR_KW(self):
            return self.getToken(CParserParser.CHAR_KW, 0)

        def VOID(self):
            return self.getToken(CParserParser.VOID, 0)

        def getRuleIndex(self):
            return CParserParser.RULE_define_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefine_value" ):
                listener.enterDefine_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefine_value" ):
                listener.exitDefine_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_value" ):
                return visitor.visitDefine_value(self)
            else:
                return visitor.visitChildren(self)




    def define_value(self):

        localctx = CParserParser.Define_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_define_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            _la = self._input.LA(1)
            if not(((((_la - 47)) & ~0x3f) == 0 and ((1 << (_la - 47)) & 1040187407) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typedef_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPEDEF(self):
            return self.getToken(CParserParser.TYPEDEF, 0)

        def type_spec(self):
            return self.getTypedRuleContext(CParserParser.Type_specContext,0)


        def typedef_name(self):
            return self.getTypedRuleContext(CParserParser.Typedef_nameContext,0)


        def struct_specifier(self):
            return self.getTypedRuleContext(CParserParser.Struct_specifierContext,0)


        def enum_specifier(self):
            return self.getTypedRuleContext(CParserParser.Enum_specifierContext,0)


        def union_specifier(self):
            return self.getTypedRuleContext(CParserParser.Union_specifierContext,0)


        def getRuleIndex(self):
            return CParserParser.RULE_typedef_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef_decl" ):
                listener.enterTypedef_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef_decl" ):
                listener.exitTypedef_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef_decl" ):
                return visitor.visitTypedef_decl(self)
            else:
                return visitor.visitChildren(self)




    def typedef_decl(self):

        localctx = CParserParser.Typedef_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typedef_decl)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(CParserParser.TYPEDEF)
                self.state = 155
                self.type_spec()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 156
                    self.match(CParserParser.T__1)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 162
                self.typedef_name()
                self.state = 163
                self.match(CParserParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(CParserParser.TYPEDEF)
                self.state = 166
                self.struct_specifier()
                self.state = 167
                self.typedef_name()
                self.state = 168
                self.match(CParserParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.match(CParserParser.TYPEDEF)
                self.state = 171
                self.enum_specifier()
                self.state = 172
                self.typedef_name()
                self.state = 173
                self.match(CParserParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.match(CParserParser.TYPEDEF)
                self.state = 176
                self.union_specifier()
                self.state = 177
                self.typedef_name()
                self.state = 178
                self.match(CParserParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typedef_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CParserParser.IDENTIFIER, 0)

        def INT(self):
            return self.getToken(CParserParser.INT, 0)

        def FLOAT_KW(self):
            return self.getToken(CParserParser.FLOAT_KW, 0)

        def CHAR_KW(self):
            return self.getToken(CParserParser.CHAR_KW, 0)

        def VOID(self):
            return self.getToken(CParserParser.VOID, 0)

        def getRuleIndex(self):
            return CParserParser.RULE_typedef_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef_name" ):
                listener.enterTypedef_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef_name" ):
                listener.exitTypedef_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef_name" ):
                return visitor.visitTypedef_name(self)
            else:
                return visitor.visitChildren(self)




    def typedef_name(self):

        localctx = CParserParser.Typedef_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typedef_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            _la = self._input.LA(1)
            if not(((((_la - 47)) & ~0x3f) == 0 and ((1 << (_la - 47)) & 536870927) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enum_specifier(self):
            return self.getTypedRuleContext(CParserParser.Enum_specifierContext,0)


        def getRuleIndex(self):
            return CParserParser.RULE_enum_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_decl" ):
                listener.enterEnum_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_decl" ):
                listener.exitEnum_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_decl" ):
                return visitor.visitEnum_decl(self)
            else:
                return visitor.visitChildren(self)




    def enum_decl(self):

        localctx = CParserParser.Enum_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_enum_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.enum_specifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_specifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(CParserParser.ENUM, 0)

        def IDENTIFIER(self):
            return self.getToken(CParserParser.IDENTIFIER, 0)
